Fix slideIn animation on mobile

--- a/styles/components/Projects.module.css
+++ b/styles/components/Projects.module.css
@@ -7,6 +7,7 @@
 }
 .container {
   padding: 1rem;
+  overflow:hidden;
 }
 .container > * {
   margin-bottom: 1rem;
