--- a/styles/globals.css
+++ b/styles/globals.css
@@ -54,18 +54,18 @@ h1 {
 }
 @keyframes slideRight {
   0% {
-    right: 100vw;
+    transform: translateX(-100%);
   }
   100% {
-    right: 0;
+    transform: translateX(0);
   }
 }
 
 @keyframes slideLeft {
   0% {
-    left: 100vw;
+    transform: translateX(100%);
   }
   100% {
-    left: 0;
+    transform: translateX(0);
   }
 }
